Fixing fonts in checkout cart and onepage + Fixing the media block image overflow on product pages

--- a/webroot/skin/frontend/blueacorn/mis/scss/module/_checkout-onepage.scss
+++ b/webroot/skin/frontend/blueacorn/mis/scss/module/_checkout-onepage.scss
@@ -379,11 +379,6 @@ body:not(.opc-has-progressed-from-login) .opc.opc-firststep-login .section#opc-l
         padding-left: 15px;
         margin-bottom: 10px;
         font-family: $f-stack-serif;
-        font-style: italic;
-
-        address {
-            font-style: italic;
-        }
     }
 
     #payment-progress-opcheckout .subtitle {
